--- a/index.html
+++ b/index.html
@@ -1,53 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/21b9934e7f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Rota Livre</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- HEADER - MENU -->
     <header>
-        <div class="logo">
-            <img src="img/logo.png" alt="Logomarca Rota Livre">
+      <div class="logo">
+        <img src="img/logo.png" alt="Logomarca Rota Livre" />
+      </div>
+      <nav>
+        <div class="list-menu">
+          <ul>
+            <li>
+              <a href="#">HOME</a>
+            </li>
+            <li>
+              <a href="#">SOBRE NóS</a>
+            </li>
+            <li>
+              <a href="#">SERVIÇOS</a>
+            </li>
+            <li>
+              <a href="#">CONTATO</a>
+            </li>
+          </ul>
         </div>
-        <nav>
-            <div class="list-menu">
-                <ul>
-                    <li>
-                        <a href="#">HOME</a>
-                    </li>
-                    <li>
-                        <a href="#">SOBRE NóS</a>
-                    </li>
-                    <li>
-                        <a href="#">SERVIÇOS</a>
-                    </li>
-                    <li>
-                        <a href="#">CONTATO</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+      </nav>
     </header>
     <main>
-
+      <!-- 1ª SESSÃO MAPAS  -->
+      <section id="home">
+        <div class="content">
+          <div class="box-content">
+            <h3>Chegue mais rápido</h3>
+            <h3>Chegue melhor.</h3>
+            <input
+              type="text"
+              id="origem"
+              class="cxInput"
+              placeholder="Origem"
+            />
+            <input
+              type="text"
+              id="destino"
+              class="cxInput"
+              placeholder="Destino"
+            />
+            <a href="#" class="btn">PLANEJAR ROTA</a>
+          </div>
+        </div>
+        <div class="content">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14638.068565505864!2d-46.295335599999994!3d-23.477875649999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749169349954!5m2!1spt-BR!2sbr"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
 
     <script src="script.js"></script>
-        <!-- CÓDIGO PARA INCORPORAR A FUNÇÃO LIBRAS NA PAGINA -->
+    <!-- CÓDIGO PARA INCORPORAR A FUNÇÃO LIBRAS NA PAGINA -->
     <div vw class="enabled">
-        <div vw-access-button class="active"></div>
-        <div vw-plugin-wrapper>
-            <div class="vw-plugin-top-wrapper"></div>
-        </div>
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
     </div>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
-        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      new window.VLibras.Widget("https://vlibras.gov.br/app");
     </script>
-</body>
+  </body>
 </html>
