--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14638.068565505864!2d-46.295335599999994!3d-23.477875649999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749169349954!5m2!1spt-BR!2sbr"
             width="100%"
-            height="450"
+            height="100%"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
@@ -69,6 +69,38 @@
           ></iframe>
         </div>
       </section>
+      <!-- 2ª sessão -->
+       <h2>Como Funciona</h2>
+       <section id="home_2">        
+        <div class="card">
+          <div class="image">
+            <a href="#"><img src="img/placa-de-sinalizacao.png" alt="imagem placa de sinalização"></a>
+            <p>Planeje sua Rota</p>
+          </div>
+        </div>
+        <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
+        <div class="card">
+          <div class="image">
+            <a href="#"><img src="img/transporte.png" alt="imagem trem"></a>
+            <p>Escolha seu Transporte</p>
+          </div>
+        </div>
+          <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
+        <div class="card">
+          <div class="image">
+            <a href="#"><img src="img/forma-de-pagamento.png" alt="imagem de forma de pagamento online"></a>
+            <p>Pagamento online</p>
+          </div>
+        </div>
+          <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
+        <div class="card">
+          <div class="image">
+            <a href="#"><img src="img/mobilidade_opcao_2.png" alt="imagem patinete"></a>
+            <p>Mova-se com facilidade</p>
+          </div>
+        </div>
+
+       </section>
     </main>
     <footer></footer>
 
