--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/21b9934e7f.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Rota Livre</title>
   </head>
@@ -40,8 +41,12 @@
       <section id="home">
         <div class="content">
           <div class="box-content">
+            <div class="typing">
+              <span id="typed"></span>
+            </div>
+            <!--  
             <h3>Chegue mais rápido</h3>
-            <h3>Chegue melhor.</h3>
+            <h3>Chegue melhor.</h3> -->
             <input
               type="text"
               id="origem"
@@ -70,37 +75,70 @@
         </div>
       </section>
       <!-- 2ª sessão -->
-       <h2>Como Funciona</h2>
-       <section id="home_2">        
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/placa-de-sinalizacao.png" alt="imagem placa de sinalização"></a>
-            <p>Planeje sua Rota</p>
+      <h2>Como Funciona</h2>
+      <section id="home_2">
+        <div class="container">
+          <div class="card">
+            <div class="image">
+              <a href="#"
+                ><img
+                  src="img/placa-de-sinalizacao.png"
+                  alt="imagem placa de sinalização"
+              /></a>
+              <p>Planeje sua Rota</p>
+            </div>
           </div>
-        </div>
-        <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/transporte.png" alt="imagem trem"></a>
-            <p>Escolha seu Transporte</p>
-          </div>
-        </div>
-          <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/forma-de-pagamento.png" alt="imagem de forma de pagamento online"></a>
-            <p>Pagamento online</p>
-          </div>
-        </div>
-          <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/mobilidade_opcao_2.png" alt="imagem patinete"></a>
-            <p>Mova-se com facilidade</p>
-          </div>
-        </div>
 
-       </section>
+          <div class="seta">
+            <img
+              src="img/angulo-da-seta-direita.png"
+              alt="imagem seta para direita"
+            />
+          </div>
+
+          <div class="card">
+            <div class="image">
+              <a href="#"><img src="img/transporte.png" alt="imagem trem" /></a>
+              <p>Escolha seu Transporte</p>
+            </div>
+          </div>
+
+          <div class="seta">
+            <img
+              src="img/angulo-da-seta-direita.png"
+              alt="imagem seta para direita"
+            />
+          </div>
+
+          <div class="card">
+            <div class="image">
+              <a href="#"
+                ><img
+                  src="img/forma-de-pagamento.png"
+                  alt="imagem de forma de pagamento online"
+              /></a>
+              <p>Pagamento online</p>
+            </div>
+          </div>
+
+          <div class="seta">
+            <img
+              src="img/angulo-da-seta-direita.png"
+              alt="imagem seta para direita"
+            />
+          </div>
+
+          <div class="card">
+            <div class="image">
+              <a href="#"
+                ><img src="img/mobilidade_opcao_2.png" alt="imagem patinete"
+              /></a>
+              <p>Mova-se com facilidade</p>
+            </div>
+          </div>
+
+        </div>
+      </section>
     </main>
     <footer></footer>
 
