--- a/GBF/diversao.html
+++ b/GBF/diversao.html
@@ -5,56 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="diversao.css">
 </head>
 
 <body>
     <!-- MEU HEADER -->
     <header>
         <div class="logo">
-          <img src="img/logo.png" alt="Logomarca Rota Livre" />
+            <img src="img/logo.png" alt="Logomarca Rota Livre" />
         </div>
         <nav>
-          <div class="list-menu">
-            <ul>
-              <li>
-                <a href="#">HOME</a>
-              </li>
-              <li>
-                <a href="#">SOBRE NóS</a>
-              </li>
-              <li>
-                <a href="#">SERVIÇOS</a>
-              </li>
-              <li>
-                <a href="#">CONTATO</a>
-              </li>
-            </ul>
-          </div>
+            <div class="list-menu">
+                <ul>
+                    <li>
+                        <a href="#">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#">SOBRE NóS</a>
+                    </li>
+                    <li>
+                        <a href="#">SERVIÇOS</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTATO</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-      </header>
+    </header>
 
-      <main>
+    <main>
         <section class="diversao">
             <div>
-                <h2>Prepare-se para a diversão</h2>
+                <h1>Prepare-se para a diversão</h1>
             </div>
         </section>
 
         <section class="diversao02">
             <h2>Você quer se divertir e não sabe?</h2>
-            <p>conheça lugares para 
+            <p>conheça lugares para
                 se divertir em quatro rodas</p>
 
-                <img src="" alt="">
+            <img src="imagem/nfsigkirt.jpg" alt="kart">
         </section>
 
         <section class="diversao03">
             <div>
-                
-            </div>
+                <h2>lugares para sair coma familia</h2>
+                <div>
+                    <img src="imagem/ibirapuera.jpg" alt="">
+                </div>
 
+                <div>
+                    <img src="imagem/Kangoo Park.jpg" alt="">
+                </div>
+
+                <div>
+                    <img src="imagem/Zoológico e Aquário.jpg" alt="">
+                </div>
+
+                <div>
+                    <img src="imagem/parque magic city.jpg" alt="">
+                </div>
+            </div>
         </section>
-      </main>
+    </main>
 </body>
 
 </html>
