--- a/index.html
+++ b/index.html
@@ -1,170 +1,204 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/21b9934e7f.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>Rota Livre</title>
-  </head>
-  <body>
-    <!-- HEADER - MENU -->
-    <header>
-      <div class="logo">
-        <img src="img/logo.png" alt="Logomarca Rota Livre" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/21b9934e7f.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css" />
+  <title>Rota Livre</title>
+</head>
+
+<body>
+  <!-- HEADER - MENU -->
+  <header>
+    <div class="logo">
+      <img src="img/logo.png" alt="Logomarca Rota Livre" />
+    </div>
+    <div class="menu-toggle" id="menu-toggle">
+  <i class="fas fa-bars"></i>
+</div>
+    <nav id="menu">
+      <div class="list-menu">
+        <ul>
+          <li>
+            <a href="#">HOME</a>
+          </li>
+          <li>
+            <a href="#">SOBRE NóS</a>
+          </li>
+          <li>
+            <a href="#">SERVIÇOS</a>
+          </li>
+          <li>
+            <a href="#">CONTATO</a>
+          </li>
+        </ul>
       </div>
-      <nav>
-        <div class="list-menu">
-          <ul>
-            <li>
-              <a href="#">HOME</a>
-            </li>
-            <li>
-              <a href="#">SOBRE NóS</a>
-            </li>
-            <li>
-              <a href="#">SERVIÇOS</a>
-            </li>
-            <li>
-              <a href="#">CONTATO</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <!-- 1ª SESSÃO MAPAS  -->
-      <section id="home">
-        <div class="content">
-          <div class="box-content">
+    </nav>
+  </header>
 
-            <div id="typed"></div>
+  <main>
+    <!-- 1ª SESSÃO MAPAS E ENTRADAS  -->
 
-            <input
-              type="text"
-              id="origem"
-              class="cxInput"
-              placeholder="Origem"
-            />
-            <input
-              type="text"
-              id="destino"
-              class="cxInput"
-              placeholder="Destino"
-            />
-            <a href="#" class="btn">PLANEJAR ROTA</a>
+    <section id="home">
+
+      <div class="content">
+        <div class="box-content">
+          <div class="typing">
+            <span id="typed"></span>
           </div>
+          <input type="text" id="origem" class="cxInput" placeholder="Origem" />
+          <input type="text" id="destino" class="cxInput" placeholder="Destino" />
+          <a href="#" class="btn">PLANEJAR ROTA</a>
         </div>
-        <div class="content">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14638.068565505864!2d-46.295335599999994!3d-23.477875649999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749169349954!5m2!1spt-BR!2sbr"
-            width="100%"
-            height="450"
-            height="100%"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+      </div>
+      <div class="content">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14638.068565505864!2d-46.295335599999994!3d-23.477875649999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749169349954!5m2!1spt-BR!2sbr"
+          width="100%" height="450" height="100%" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+
+    <!-- 2ª sessão   COMO FUNCIONA -->
+
+    <h2>Como Funciona</h2>
+    <section id="home_2">
+      <div class="card">
+        <div class="image">
+          <a href="#"><img src="img/placa-de-sinalizacao.png" alt="imagem placa de sinalização" /></a>
+          <p>Planeje sua Rota</p>
         </div>
-      </section>
-      <!-- 2ª sessão -->
-       <h2>Como Funciona</h2>
-       <section id="home_2">        
+        <div class="seta">
+          <img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita" />
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <a href="#"><img src="img/transporte.png" alt="imagem trem" /></a>
+          <p>Escolha seu Transporte</p>
+        </div>
+        <div class="seta">
+          <img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita" />
+        </div>
+      </div>
+
+      <!-- 
         <div class="card">
           <div class="image">
-            <a href="#"><img src="img/placa-de-sinalizacao.png" alt="imagem placa de sinalização"></a>
-            <p>Planeje sua Rota</p>
-          </div>
-        </div>
-        <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/transporte.png" alt="imagem trem"></a>
-            <p>Escolha seu Transporte</p>
-          </div>
-        </div>
-          <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/forma-de-pagamento.png" alt="imagem de forma de pagamento online"></a>
+            <a href="#"
+              ><img
+                src="img/forma-de-pagamento.png"
+                alt="imagem de forma de pagamento online"
+            /></a>
             <p>Pagamento online</p>
           </div>
+          <div class="seta">
+          <img
+            src="img/angulo-da-seta-direita.png"
+            alt="imagem seta para direita"
+          />
         </div>
-          <div class="seta"><img src="img/angulo-da-seta-direita.png" alt="imagem seta para direita"></div>
-        <div class="card">
-          <div class="image">
-            <a href="#"><img src="img/mobilidade_opcao_2.png" alt="imagem patinete"></a>
-            <p>Mova-se com facilidade</p>
-          </div>
-        </div>
+        </div>  -->
 
-       </section>
-    </main>
-    <footer>
-      <div class="container">
-        <div class="content-1">
-          <h4 class="title-footer">ROTA <span>LIVRE</span></h4>
-
-          <ul>
-            <li>
-              <a href="#">Sobre nós</a>
-            </li>
-            <li>
-              <a href="#">Menu</a>
-            </li>
-            <li>
-              <a href="#">Politica privacidade</a>
-            </li>
-            <li>
-              <a href="#">Termos de serviço</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="content-1">
-          <h4 class="title-footer">OBTENHA <span>AJUDA</span></h4>
-          <ul>
-            <li>
-              <a href="#">FAQ</a>
-            </li>
-            <li>
-              <a href="#">Devoluções</a>
-            </li>
-            <li>
-              <a href="#">Opções de pagamento</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="content-1">
-          <h4 class="title-footer">Siga <span>-nos</span></h4>
-          <div class="social-links">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          </div>
+      <div class="card">
+        <div class="image">
+          <a href="#"><img src="img/mobilidade_opcao_2.png" alt="imagem patinete" /></a>
+          <p>Mova-se com facilidade</p>
         </div>
       </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025. ROTA LIVRE Todos Direitos Reservado</p>
+    </section>
+
+    <!-- 3ª SESSÃO CARROSSEL -->
+<section class="depoimentos">
+  <h3>Depoimentos de Usuários</h3>
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide caixa-01"></div>
+      <div class="swiper-slide caixa-02"></div>
+      <div class="swiper-slide caixa-03"></div>
+      <div class="swiper-slide caixa-04"></div>
+    </div>
+  </div>
+</section>
+  </main>
+
+  <!-- 4ª SESSÃO RODAPE  -->
+
+  <footer>
+    <div class="container">
+      <div class="content-1">
+        <h4 class="title-footer">ROTA <span>LIVRE</span></h4>
+
+        <ul>
+          <li>
+            <a href="#">Sobre nós</a>
+          </li>
+          <li>
+            <a href="#">Menu</a>
+          </li>
+          <li>
+            <a href="#">Politica privacidade</a>
+          </li>
+          <li>
+            <a href="#">Termos de serviço</a>
+          </li>
+        </ul>
       </div>
-    </footer>
-    <script src="script.js"></script>
-    <!-- CÓDIGO PARA INCORPORAR A FUNÇÃO LIBRAS NA PAGINA -->
-    <div vw class="enabled">
-      <div vw-access-button class="active"></div>
-      <div vw-plugin-wrapper>
-        <div class="vw-plugin-top-wrapper"></div>
+
+      <div class="content-1">
+        <h4 class="title-footer">OBTENHA <span>AJUDA</span></h4>
+        <ul>
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+          <li>
+            <a href="#">Devoluções</a>
+          </li>
+          <li>
+            <a href="#">Opções de pagamento</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="content-1">
+        <h4 class="title-footer">Siga <span>-nos</span></h4>
+        <div class="social-links">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
       </div>
     </div>
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>
-      new window.VLibras.Widget("https://vlibras.gov.br/app");
-    </script>
-  </body>
+    <div class="footer-bottom">
+      <p>&copy; 2025. ROTA LIVRE Todos Direitos Reservado</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
+
+  <!-- CÓDIGO PARA INCORPORAR A FUNÇÃO LIBRAS NA PAGINA -->
+
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget("https://vlibras.gov.br/app");
+  </script>
+  <script 
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoilxBUsC78sRAsCAvpwTO39TJlKZyDwk&callback=initMap"
+  async
+  defer>
+</script>
+</body>
+
 </html>
