--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
       <div class="list-menu">
         <ul>
           <li>
-            <a href="#">HOME</a>
+            <a href="Victor/bike.html">Bicicletas</a>
           </li>
           <li>
-            <a href="#">SOBRE NóS</a>
+            <a href="EJR/patinete.html">Patinetes</a>
           </li>
           <li>
-            <a href="#">SERVIÇOS</a>
+            <a href="GBF/diversao.html">Eventos</a>
           </li>
           <li>
-            <a href="#">CONTATO</a>
+            <a href="#">Sobre nós</a>
           </li>
         </ul>
       </div>
