--- a/EJR/patinete.html
+++ b/EJR/patinete.html
@@ -22,9 +22,7 @@
         <div class="divpai-text">
             <div>
                 <h3>1º Encontro Sustentável de Patinetes!</h3>
-            </div>
 
-            <div>
                 <p>Recarregue as baterias e venha participar de um passeio coletivo cheio de consciência e energia boa!
                     O
                     Encontro Sustentável de Patinetes é uma forma divertida de incentivar a mobilidade limpa e o cuidado
@@ -38,9 +36,14 @@
         </div>
     </section>
 
+
     <!-- 3º SESSÃO -->
     <section class="eventos-atuais">
         <h3>EVENTOS <span>ATUAIS</span></h3>
+
+        <div>
+            <!-- IMG -->
+        </div>
     </section>
 </body>
 
