--- a/GBF/diversao.html
+++ b/GBF/diversao.html
@@ -42,30 +42,34 @@
         </section>
 
         <section class="diversao02">
-            <h2>Você quer se divertir e não sabe?</h2>
-            <p>conheça lugares para
-                se divertir em quatro rodas</p>
+            <div class="box-01">
+                <h2>Você quer se divertir e não sabe?</h2>
+                <p>conheça lugares para
+                    se divertir em quatro rodas</p>
+            </div>
 
-            <img src="imagem/nfsigkirt.jpg" alt="kart">
+            <div class="box-01">
+                <img src="imagem/nfsigkirt.jpg" alt="kart">
+            </div>
         </section>
 
         <section class="diversao03">
             <div>
                 <h2>lugares para sair coma familia</h2>
-                <div>
-                    <img src="imagem/ibirapuera.jpg" alt="">
+                <div class="box">
+                    <img src="imagem/ibirapuera.jpg" alt="" class="img">
                 </div>
 
-                <div>
-                    <img src="imagem/Kangoo Park.jpg" alt="">
+                <div class="box">
+                    <img src="imagem/Kangoo Park.jpg" alt="" class="img">
                 </div>
 
-                <div>
-                    <img src="imagem/Zoológico e Aquário.jpg" alt="">
+                <div class="box">
+                    <img src="imagem/Zoológico e Aquário.jpg" alt="" class="img">
                 </div>
 
-                <div>
-                    <img src="imagem/parque magic city.jpg" alt="">
+                <div class="box">
+                    <img src="imagem/parque magic city.jpg" alt="" class="img">
                 </div>
             </div>
         </section>
