--- a/EJR/patinete.html
+++ b/EJR/patinete.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
+
+    <header>
+<div class="menu">
+    <img src="img/logo.png" alt="Logo Rota Livre">
+</div>
+
+<nav></nav>
+    </header>
+
     <!-- 1º SESSÃO -->
     <section class="img1">
         <!-- img -->
