--- a/EJR/patinete.html
+++ b/EJR/patinete.html
@@ -5,15 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
+
 <body>
 
+    <!-- CABEÇALHO -->
     <header>
-<div class="menu">
-    <img src="img/logo.png" alt="Logo Rota Livre">
-</div>
+        <div class="logo">
+            <img src="img/logo.png" alt="Logo Rota Livre">
+        </div>
 
-<nav></nav>
+        <nav>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="#">HOME</a>
+                    </li>
+
+                    <li>
+                        <a href="#">SOBRE</a>
+                    </li>
+
+                    <li>
+                        <a href="#">SERVIÇOS</a>
+                    </li>
+
+                    <li>
+                        <a href="#">CONTATO</a>
+                    </li>
+                </ul>
+
+
+
+
+
+
+            </div>
+        </nav>
+
+
+
+
+
+
+
+
+
+
+
+
     </header>
 
     <!-- 1º SESSÃO -->
@@ -29,7 +70,7 @@
 
         <div class="divpai-text">
             <div>
-                <h3>1º Encontro Sustentável de Patinetes!</h3>
+                <h3>1º Encontro Sustentável de Patinetes</h3>
 
                 <p>Recarregue as baterias e venha participar de um passeio coletivo cheio de consciência e energia boa!
                     O
@@ -53,6 +94,16 @@
             <!-- IMG -->
         </div>
     </section>
+
+
+    <!-- RODAPÉ  -->
+     <footer>
+        <div class="logo">
+            <img src="" alt="logo rota livre">
+        </div>
+
+        <div></div>
+     </footer>
 </body>
 
 </html>
