--- a/GBF/diversao.html
+++ b/GBF/diversao.html
@@ -53,27 +53,82 @@
             </div>
         </section>
 
-        <section class="diversao03">
-            <div>
-                <h2>lugares para sair coma familia</h2>
-                <div class="box">
-                    <img src="imagem/ibirapuera.jpg" alt="" class="img">
+        <section>
+            <h2 class="titulo">lugares para sair coma familia</h2>
+            <div class="caixa">
+
+                <div class="box-02">
+                    <div class="box">
+                        <img src="imagem/ibirapuera.jpg" alt="" class="img">
+                    </div>
+
+                    <div class="box">
+                        <img src="imagem/Kangoo Park.jpg" alt="" class="img">
+                    </div>
+
                 </div>
 
-                <div class="box">
-                    <img src="imagem/Kangoo Park.jpg" alt="" class="img">
-                </div>
+                <div class="box-03">
 
-                <div class="box">
-                    <img src="imagem/Zoológico e Aquário.jpg" alt="" class="img">
-                </div>
+                    <div class="box">
+                        <img src="imagem/Zoológico e Aquário.jpg" alt="" class="img">
+                    </div>
 
-                <div class="box">
-                    <img src="imagem/parque magic city.jpg" alt="" class="img">
+                    <div class="box">
+                        <img src="imagem/parque magic city.jpg" alt="" class="img">
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="content-1">
+                <h4 class="title-footer">ROTA <span>LIVRE</span></h4>
+
+                <ul>
+                    <li>
+                        <a href="#">Sobre nós</a>
+                    </li>
+                    <li>
+                        <a href="#">Politica privacidade</a>
+                    </li>
+                    <li>
+                        <a href="#">Termos de serviço</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="content-1">
+                <h4 class="title-footer">OBTENHA <span>AJUDA</span></h4>
+                <ul>
+                    <li>
+                        <a href="#">FAQ</a>
+                    </li>
+                    <li>
+                        <a href="#">Devoluções</a>
+                    </li>
+                    <li>
+                        <a href="#">Opções de pagamento</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="content-1">
+                <h4 class="title-footer">Siga <span>-nos</span></h4>
+                <div class="social-links">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025. ROTA LIVRE Todos Direitos Reservado</p>
+        </div>
+    </footer>
 </body>
 
 </html>
