--- a/Victor/bike.html
+++ b/Victor/bike.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bike.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> /
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- linha 10 e 11 link do carrossel Acima  -->
 
@@ -51,17 +51,21 @@
 <body>
 
     <!-- section 1, do carrosel -->
-    <section class="mob-bike1">
+    <section class="swiper">
         <div class="carousel-apresentacao">
             <h1>Transformando Cidades com Pedaladas</h1>
         </div>
 
-        <div class="swiper-wrapper">
+        <div class="swiper">
+            
+            <div class="swiper-wrapper"></div>
 
             <div class="swiper-wrapper slide-01"></div>
             <div class="swiper-wrapper slide-02"></div>
             <div class="swiper-wrapper slide-03"></div>
             <div class="swiper-wrapper slide-04"></div>
+
+           
 
         </div>
 
@@ -71,7 +75,7 @@
 
     <section class="mob-bike-2">
 
-        <div class="img-section01">
+        <div class="img-section02">
             <img src="img/logo.png" alt="">
         </div>
 
