--- a/GBF/diversao.html
+++ b/GBF/diversao.html
@@ -35,10 +35,16 @@
     </header>
 
     <main>
-        <section class="diversao">
-            <div>
+        <section class="diversao swiper">
+            <div class="star carroussel-text">
                 <h1>Prepare-se para a diversão</h1>
             </div>
+            
+        <div class="swiper-wrapper">
+            <div class="swiper-slide caixa-01"></div>
+            <div class="swiper-slide caixa-02"></div>
+            <div class="swiper-slide caixa-03"></div>
+        </div>
         </section>
 
         <section class="diversao02">
@@ -54,7 +60,9 @@
         </section>
 
         <section>
-            <h2 class="titulo">lugares para sair coma familia</h2>
+            <div class="box-01">
+                <h2 class="titulo">lugares para sair como familia</h2>
+            </div>
             <div class="caixa">
 
                 <div class="box-02">
@@ -129,6 +137,7 @@
             <p>&copy; 2025. ROTA LIVRE Todos Direitos Reservado</p>
         </div>
     </footer>
+    <script src="diversao.js"></script>
 </body>
 
 </html>
